--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-<h1>Pokédex</h1>
-<ul class="pokemon-list"></ul>
+    <h1>Pokédex</h1>
+    <ul class="pokemon-list"></ul>
 
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
     <script src="js/script.js"></script>
 </body>
 
