--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
-    <h1>Pokédex</h1>
-    <ul class="pokemon-list"></ul>
+   <div><h1>Pokédex</h1></div> 
+   <div><ul class="pokemon-list"></ul></div> 
+    <!-- <button id="show-modal">Show Modal</button>
+    <button id="show-dialog">Show Dialog</button> -->
+    <div id="modal-container"></div>
 
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
