--- a/index.html
+++ b/index.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>National Pokedex</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
-
 <body>
-   <div><h1>Pokédex</h1></div> 
-   <div><ul class="pokemon-list"></ul></div> 
-    <!-- <button id="show-modal">Show Modal</button>
-    <button id="show-dialog">Show Dialog</button> -->
-    <div id="modal-container"></div>
+    <nav class="navbar navbar-light" style="background-color: #FFDE00">
+        <img src="/img/pikachu.svg" id="pikachu" width="100" height="100" class="d-inline-block" alt="pikachu">
+        <img src="/img/pokelogo.svg" id="pokelogo" width="100px" height="100px" class="d-inline-block align-top" alt="pokemon logo">
+        <li class="nav-item">
+            <a class="nav-link" href="https://bulbapedia.bulbagarden.net/wiki/Pokédex">Bulbapedia</a>
+            <a class="nav-link" href="https://serebii.net">Serebii</a>
+          </li>
+      </nav>
+    <main>
+        <div class="container">
+            <div class="pokemon-list"></div>
+        </div>
+    </main>
 
+    <div class="modal fade" id="modal-container" tabindex="-1" role="dialog" aria-labelledby="modal-title"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modal-title"></h5>
+                    <button type="button" class="btn btn-secondary btn-lg" data-dismiss="modal">Close
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body"></div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/script.js"></script>
 </body>
-
 </html>
