--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-light" style="background-color: #FFDE00">
-        <img src="/img/pikachu.svg" id="pikachu" width="100" height="100" class="d-inline-block" alt="pikachu">
-        <img src="/img/pokelogo.svg" id="pokelogo" width="100px" height="100px" class="d-inline-block align-top" alt="pokemon logo">
+    <nav class="navbar navbar-light" style="background-color: #2A52BE">
+        <img src="./img/pikachu.svg" id="pikachu" alt="pikachu">
+        <img src="./img/pokelogo.svg" id="pokelogo" class="d-inline-block align-top" alt="pokemon logo">
         <li class="nav-item">
+            <a class="nav-link" href="https://www.pokemon.com/us">Official Pokemon Website</a>
             <a class="nav-link" href="https://bulbapedia.bulbagarden.net/wiki/Pokédex">Bulbapedia</a>
             <a class="nav-link" href="https://serebii.net">Serebii</a>
+            <a class="nav-link" href="https://github.com/nesty11/national-dex">Github</a>
           </li>
       </nav>
     <main>
-        <div class="container">
+        <div class="container" >
             <div class="pokemon-list"></div>
         </div>
     </main>
