--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-light" style="background-color: #2A52BE">
+    <nav class="navbar navbar-light bg-body-tertiary" style="background-color: #2A52BE">
+        <div class="container-fluid">
         <img src="./img/pikachu.svg" id="pikachu" alt="pikachu">
         <img src="./img/pokelogo.svg" id="pokelogo" class="d-inline-block align-top" alt="pokemon logo">
         <li class="nav-item">
@@ -18,6 +19,7 @@
             <a class="nav-link" href="https://serebii.net">Serebii</a>
             <a class="nav-link" href="https://github.com/nesty11/national-dex">Github</a>
           </li>
+        </div>
       </nav>
     <main>
         <div class="container" >
