--- a/index.html
+++ b/index.html
@@ -14,57 +14,33 @@
   </head>
 
   <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-body-tertiary"
-      style="background-color: #2a52be"
-    >
+    <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary" style="background-color: #2a52be">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="./img/pikachu.svg" id="pikachu" alt="pikachu" />
-          <img
-            src="./img/pokelogo.svg"
-            id="pokelogo"
-            class="d-inline-block align-top"
-            alt="pokemon logo"
-          />
+          <img src="./img/pokelogo.svg" id="pokelogo" class="d-inline-block align-top" alt="pokemon logo" />
         </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="https://www.pokemon.com/us"
-                >Official Pokemon Website</a
-              >
+              <a class="nav-link" href="https://www.pokemon.com/us">Official Pokemon Website</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                href="https://bulbapedia.bulbagarden.net/wiki/Pokédex"
-                >Bulbapedia</a
-              >
+              <a class="nav-link" href="https://bulbapedia.bulbagarden.net/wiki/Pokédex">Bulbapedia</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://serebii.net">Serebii</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://github.com/nesty11/national-dex"
-                >Github</a
-              >
+              <a class="nav-link" href="https://github.com/nesty11/national-dex">Github</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+    
 
     <main>
       <div class="container">
