--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="dis/styles.css" />
+    <link rel="stylesheet" type="text/css" href="dist/styles.css" />
   </head>
 
   <body>
@@ -114,6 +114,6 @@
     ></script>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
-    <script src="dis/script.js"></script>
+    <script src="dist/script.js"></script>
   </body>
 </html>
